--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -35,18 +35,18 @@
 
 // Define base and accent colors
 $base-color: #3498db;
-$base-color-hover: darken($base-color, 10%);
+$base-color-hover: darken($base-color, 20%);
 
 // Define background colors
 $background: #fff;
 $background-alt: #f2f2f5;
 
 // Define border colors
-$border: #dcd9d9;
+$border: #c9c9c9;
 
 // Define text colors
 $heading: #374054;
-$text: #74808a;
+$text: #01050a;
 
 /*
     ---------------------
